fix nav on mobile

--- a/src/css/desktop/base.less
+++ b/src/css/desktop/base.less
@@ -100,3 +100,10 @@ body {
   background-repeat: no-repeat;
   background-size: 30px 30px;
 }
+
+@media (max-width: 767px) {
+  .walkup-nav {
+    margin-left: -20px;
+    margin-right: -20px;
+  }
+}
